spacing fix again

--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -900,6 +900,10 @@ img {
           margin: 45px 0 25px;
       }
       
+      & p{
+          margin: 0 0 15px;
+      }
+      
       & .img-holder{
           text-align: center;
           margin: 25px 0;
